--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,9 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
     <title>My Webpage!</title>
 </head>
 <body>
-    Hello, world
+    Hello, world! Hello again!
 </body>
 </html>
